codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_code_empty_full.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 3252
expression: terminal.backend()
---
"                                                                                                                        "
"› Ask Codex to do anything                                                                                              "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"  gpt-5.4 high · 100% left · ~/Workspace/codey                                          Code mode (shift+tab to cycle)  "
